--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 jobs:
   test:
-    working_directory: ~/text_api
+    working_directory: ~/snapapp_api
     docker:
       - image: circleci/ruby:2.4.3
         environment:
@@ -11,7 +11,7 @@ jobs:
       - image: postgres:10.3-alpine
         environment:
           POSTGRES_USER: postgres
-          POSTGRES_DB: text_api_test
+          POSTGRES_DB: snapapp_api_test
           POSTGRES_PASSWORD: ""
     steps:
       - checkout
@@ -19,7 +19,7 @@ jobs:
       # Restore Cached Dependencies
       - type: cache-restore
         name: Restore bundle cache
-        key: text_api-{{ checksum "Gemfile.lock" }}
+        key: snapapp_api-{{ checksum "Gemfile.lock" }}
 
       # Bundle install dependencies
       - run: bundle install --path vendor/bundle
@@ -27,7 +27,7 @@ jobs:
       # Cache Dependencies
       - type: cache-save
         name: Store bundle cache
-        key: text_api-{{ checksum "Gemfile.lock" }}
+        key: snapapp_api-{{ checksum "Gemfile.lock" }}
         paths:
           - vendor/bundle
 
