--- a/config/database.yml
+++ b/config/database.yml
@@ -15,15 +15,15 @@ default: &default
 
 development:
   <<: *default
-  database: <%= ENV.fetch("POSTGRES_DB", "text_api_dev") %>
+  database: <%= ENV.fetch("POSTGRES_DB", "snapapp_api_dev") %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: <%= ENV.fetch("POSTGRES_DB", "text_api_test") %>
+  database: <%= ENV.fetch("POSTGRES_DB", "snapapp_api_test") %>
 
 production:
   <<: *default
-  database: <%= ENV.fetch("POSTGRES_DB", "text_api") %>
+  database: <%= ENV.fetch("POSTGRES_DB", "snapapp_api") %>
